# link-shortener

./: .dockerignore  .env.dist  .gitignore  .pylintrc  Dockerfile  README.md  application.py  cli_setup.py  dev.sh  fabfile.py  pyproject.toml  rsync_exclude.txt  shortener.ini  wsgi.py
migrations/: alembic.ini
migrations/versions/: 202004121410_e857f4f9eb94_initial.py
shortener/: __init__.py  config.py  controller.py  logger.py  models.py
tests/: conftest.py  test_shortener.py
